# BigDFT

./: .bzrignore  .envrc  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Installer.py  KNOWN_PROBLEMS  Makefile.am  NEWS  README  UniParse.py  autogen.sh  bigdft.modules  bigdft.pc.in  branchfile  compile_with_pexsi.txt  configure.ac  configure.in  curie.rc  distfiles  glib.patch  glib2.patch  gnome.modules  install_PEXSI.txt  jhbuild.py  jhbuildrc  libABINIT.patch  libxc-1.1.0.patch  libxc-2.0.x.patch  wannier90-2.0.0.patch
PSolver/tests/: FiniteDiffCorff_2der.inc  Generalized_PSolver.f90  Generalized_PSolver_giu.f90  INSTALL  Makefile.am  PS_Check.f90  PS_Check.ref.yaml  PS_Exercise.f90  PS_Program.f90  README  tols.yaml
PyYAML-3.10/: Makefile.am
S_GPU/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.ac  cudalt.py
S_GPU/doc/: doxy.conf
S_GPU/examples/: Makefile.am  Makefile.examples.am
S_GPU/m4/: ax_cuda.m4  ax_python_embed.m4  ax_python_module.m4
S_GPU/src/: Makefile.am  class_utils.h  exceptions.h  fct_call.h  fct_call_implementation.cpp  fct_call_implementation.h  init_network.cpp  init_network.h  localqueu.cpp  localqueu.h  manage_cpu_affinity.cpp  manage_cpu_affinity.h  manage_global_var.h  message.h  read_conf_exception.h  read_conf_file.cpp  read_conf_file.h  s_gpu.h  set_repartition.cpp  set_repartition.h  sg_common_def.h
bigdft/: AUTHORS  KNOWN_PROBLEMS  Makefile.am  NEWS  README  bigdft.pc.in  bigdft_environment.sh.in  bigdftvars.sh  bigdftvars.sh.in  config.h.in~  configure.ac
bigdft-1.7.5/: INSTALL  Makefile.am  configure.ac
bigdft-1.7.5/PSolver/: Makefile.am
bigdft-1.7.5/src/: Makefile.am  WaCo.f90  forces.f90  frequencies.f90  geometry.f90  lanczos_interface.f90  output.f90
bigdft-1.7.5/tests/: fldiff_yaml.py
bigdft-1.7.5/wrappers/: bcast-decl-arr-inc.f90  maxdiff-arr-inc.f90
bigdft/PSolver/: Makefile.am
bigdft/config/: Doxyfile.in  pspconf.py
bigdft/doc/: Makefile.am  README  cluster.tex  coding-rules  halFFT.tex
bigdft/flib/: Makefile.am  README
bigdft/plugins/: Makefile.am  vol.f90
bigdft/spred/: Makefile.am
bigdft/src/: BigDFT.f90  BigDFT2Wannier.f90  ConstrainedDavidson.f90  MPIfake.f90  Makefile.am  NEB.f90  README  WaCo.f90  abscalc.f90  abscalc_init.f90  abscalc_module.f90  art.f90  bfgs.f90  bigdft-tool.in  bigdft_bibliography.yaml  cluster.f90  davidson.f90  distances.f90  external.f90  fingerprint.f90  forces.f90  frequencies.f90  geometry.f90  global.f90  hpsiortho.f90  images.f90  import_database.mk  init.f90  initialization.f90  input_variables.f90  input_variables_definition.yaml  input_variables_description.c  interface_ocl.f90  lanczos.f90  lanczos_base.f90  lanczos_interface.f90  memguess.f90  mhgps.f90  output.f90  pdos.f90  (+15 more)
bigdft/tests/: DoS.py  Logfiles.py  Makefile.am  README  check.mk  extract_fragments.py  fldiff.py  fldiff_yaml.py.in  parse_log.py  report.py.in  test.html  tols-BigDFT.yaml  yaml_hl.cfg  yaml_hl.py  yaml_hl_remarks.cfg
bigdft/utils/: Makefile.am  README
bigdft/wrappers/: Makefile.am  bcast-decl-arr-inc.f90  bcast-inc.f90  linalg.f90  mpi.F90  numerics.f90
chess/: AUTHORS  Makefile.am  README  chess.pc.in  chess_environment.sh.in  chessvars.sh.in  configure.ac
chess/chesspexsi/: Makefile.am  pexsi.f90  pexsi_base.f90  pexsi_interfaces.f90  pexsi_interfaces_fake.f90  selinv.f90
chess/doc/: Doxyfile.in  Makefile.am  extra.css
chess/m4/: flib.m4  pic.m4  suitepkg.m4
chess/sparsematrix/: Makefile.am  blacs_fake.f90  parallel_linalg.f90  sparsematrix.f90  sparsematrix_base.f90  sparsematrix_errorhandling.f90  sparsematrix_init.f90  sparsematrix_io.f90  sparsematrix_memory.f90  sparsematrix_timing.f90  sparsematrix_types.f90
chess/src/: Makefile.am  chebyshev.f90  chess_base.f90  chess_input_variables_definition.yaml  chess_input_variables_fetch.c  chess_toolbox.f90  coeffs.f90  fermi_level.f90  foe.f90  foe_base.f90  foe_common.f90  highlevel_wrappers.f90  ice.f90  matrix_operations.f90  sparsematrix_highlevel.f90
chess/tests/: Makefile.am  density_kernel_sparse-evals.txt  driver.f90  driver_ccs.f90  driver_eigenvalues.f90  driver_eigenvalues.ref.yaml  driver_foe.f90  driver_foe.ref.yaml  driver_random.f90  driver_random.ref.yaml  driver_single.f90  hamiltonian_sparse-evals.txt  ice_ccs.f90  mat_600_33620.txt  overlap_ccs.txt  overlap_sparse-evals.txt  smatmul.f90  smatmul.ref.yaml  tols.yaml  utilities.f90
doc/: Makefile.am  README  ST.tex  basel-make.sh  cluster.tex  compress.ps  daub-vs-int.tex  figrid.ps  halFFT.tex
doc/Manual/: BigDFT-manual.tex  manual.tex
lib/: MPIfake.f90  Makefile.am  module_bigdft.f90.in
libABINIT/: Makefile.am  NEWS  README  configure.ac  format.pl  makedep.sh  patch  sync.sh
pseudo/: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
psolver/: AUTHORS  Makefile.am  README  configure.ac  psolver.pc.in
spred/: Makefile.am  README  config.h.in~  configure.ac
src/: B2W.f90  BigDFT.f90  BigDFT2Wannier.f90  BigDFT_API.f90  Build_Kernel.f90  ConstrainedDavidson.f90  MPIfake.f90  Makefile.am  Makefile.standalone  NEB.f90  NEB_driver.sh  NEB_images.f90  PSolver_Kernel.f90  README  SUBDIRS  WaCo.f90  abscalc.f90  abscalc_init.f90  abscalc_module.f90  ao_inguess.f90  ao_inguess.f90.THIS  applyh.f90  art.f90  bfgs.f90  bigdft-tool.in  chargedens.f90  cluster.f90  cluster_all.f90  combined_grow.f90  combined_grow_optim.f90  combined_shrink.f90  common_routines.f90  conv_per_optim.f90  conv_per_simple.f90  convolut_ib_optim.f90  convolut_optim.f90  convolut_simple.f90  daub_8.inc  davidson.f90  distances.f90  (+108 more)
test/: Makefile.am  PSolver.f90  ParPSolver.f90
tests/: Makefile.am  README  check.mk  fldiff.pl  fldiff.py  fldiff_yaml.py  parse_log.py  posinp  report.py  tols-BigDFT.yaml  yaml_hl.cfg
wrappers/: Makefile.am  allgather-inc.f90  allreduce-arr-inc.f90  allreduce-inc.f90  bcast-decl-inc.f90  f_blas.f90  gather-inc.f90  gather-inner-inc.f90  interface_cuda_fake.f90  linalg.f90  maxdiff-arr-inc.f90  maxdiff-decl-inc.f90  maxdiff-end-inc.f90  maxdiff-inc.f90  mpi.F90  numerics.f90  scatter-inc.f90
(+5526 files in other folders)
